<resources>
    <string name="app_name">Drinkat</string>

    <string name="naver_client_id" translatable="false">vTyKRfxeLRkzu3OELYyw</string>


    <string name="facebook_app_id" translatable="false">265747197258109</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb265747197258109</string>


    <string name="title_activity_main" translatable="false">Main</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="soju">Soju</string>
    <string name="beer">Beer</string>
    <string name="wine">Wine</string>
    <string name="sake">Sake</string>
    <string name="cocktail">Cocktail</string>
ㅇ
    <string name="kakao_app_key" translatable="false">7ff7bd46a972baee55ee0f73e5beb506</string>
    <string name="filter_1">Beer</string>
    <string name="filter_2">Soju</string>
    <string name="filter_3">Makgeolli</string>
    <string name="filter_4">Sake</string>
    <string name="filter_5">Liquor</string>
    <string name="filter_6">Misc</string>
    <string name="filter_7">Snack</string>
    <string name="makgeolli">Makgeolli</string>
    <string name="liquor">Liquor</string>
    <string name="snack">Snack</string>
    <string name="misc">Misc</string>
    <string name="isSaved">has been saved!</string>
    <string name="event">Event</string>
    <string name="homeUpperText">have a drink</string>
    <string name="freeSize">Free size</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="joinMembership">Join membership / Promotion</string>
    <string name="currentExpireDate">Membership expire date</string>
    <string name="nearbyPlaces">Nearby places</string>
    <string name="phone">Phone</string>
    <string name="openWeekday">Weekday</string>
    <string name="openWeekend">Weekend</string>
    <string name="dayoff">Day off</string>
    <string name="drinkList">Drink list</string>
    <string name="search">Search</string>
    <string name="inputSearchKeyword">Input search keyword</string>
    <string name="inputPubNameKeyword">Input place or pub\'s name that\nyou want to go</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="makeCall">Do you want to make a call?</string>
    <string name="pubPagePopup_joinMembership">You are not member yet!\nDo you want to join now?</string>
    <string name="yesJoin">Yes count me in!</string>
    <string name="noLater">No, later!</string>
    <string name="isYourChoice">is your choice?</string>
    <string name="providing">\'s</string>
    <string name="alreadyUsedTicket">You already used today\'s drinkat,\nCome back tomorrow</string>
    <string name="willComebackLater">Okay, see you tomorrow!</string>
    <string name="oneGlassPlease">one glass please!</string>
    <string name="cancel">Cancel</string>
    <string name="clerkCheck">Clerk check</string>
    <string name="SuccessfullyUsed">Successfully used!</string>
    <string name="isComing">is coming for free!</string>
    <string name="membershipPopupText">You are not member yet!\nDo you want to join now?</string>
    <string name="membershipPopupTextAlmostEnd">"Your membership due is coming!\nDo you want to extend your membership? "</string>
    <string name="aroundMe">Around me</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="mypage">My page</string>
    <string name="history">History</string>
    <string name="oneMoreBackButton">Closes app if you click back button one more time</string>
    <string name="notMemberYet">Not member yet</string>
    <string name="myMembership">"My membership : "</string>
    <string name="emailTitle">Hello, I have some questions</string>
    <string name="emailBody">Please write your questions here</string>
    <string name="chooseEmailApp">Choose app you want to send your email</string>
    <string name="won">won</string>
    <string name="failedGPS">Failed to retrieve current location</string>
    <string name="allowGPS">Allow GPS option in settings</string>
    <string name="turnOnGPS">Please turn on GPS</string>
    <string name="logoutMessage">Do you really want to logout?</string>
    <string name="inquire">Inquire</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="startWithFacebook">Start with Facebook</string>
    <string name="startWithKakaoTalk">Start with KakaoTalk</string>
    <string name="loginText1Main">Have one drinkat every day!</string>
    <string name="loginText1Sub">1 free drink is provided every day\nif you join our membership</string>
    <string name="loginText2Main">Check out our various pubs</string>
    <string name="loginText2Sub">We have many affiliated pubs.\nLook around nearby pubs and visit the pub you like.</string>
    <string name="loginText3Main">Show application! </string>
    <string name="loginText3Sub">Show application to clerks.\nThey will bring you the drink ordered.\nFor free!</string>
    <string name="loginText4Main">Try now!</string>
    <string name="loginText4Sub">You can sign-up simply\nwith your KakaoTalk or Facebook.\nIt only takes few clicks!</string>
    <string name="successfullyPurchased">Successfully purchased!</string>
    <string name="seeProfile">See profile photo</string>
    <string name="changeProfile">Change profile photo</string>
    <string name="deleteProfile">Delete profile photo</string>
    <string name="eventShare">Share event with friends</string>
    <string name="enterSearchText">Enter text you want to search</string>
    <string name="share">Share</string>
    <string name="shallWeHaveDrink">Shall we have some drinks here?</string>
    <string name="unknownLocation">Unknown location</string>
    <string name="termCondition">Terms &amp; Conditions</string>
    <string name="announcement">Announcements</string>
    <string name="comingSoon">COMING SOON</string>
    <string name="selectLocation">Select location</string>
    <string name="searchAroundMe">Search around me</string>
    <string name="moreLocationsAreComingSoon">More locations are coming soon!</string>
    <string name="language">Language / 언어</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="english" translatable="false">English</string>
    <string name="networkFailure">Network connection lost</string>
    <string name="inputPromotionCode">Input promotion code</string>
    <string name="apply">Apply</string>
    <string name="pleaseEnterPromotionCode">Please enter coupon code</string>
    <string name="notValidPromotionCode">Not valid promotion code</string>
    <string name="promotionCodeApplied">Promotion code\napplied!</string>
    <string name="enterName">Enter name you want to use</string>
    <string name="alreadyUsedPromotionCode">This code is already used!</string>
    <string name="alreadyAppliedPromotion">You already applied this promotion!</string>
    <string name="tossApiKey" translatable="false">sk_live_Rb201xQNngRb201xQNng</string>
    <string name="askPurchasing">Purchase this item?</string>
    <string name="purchaseWithToss">Purchase with Toss</string>
    <string name="purchaseFailed">Purchase failed!</string>
    <string name="pleaseTryAgain">Please try again</string>
    <string name="notEnoughCash">Not enough cash</string>
    <string name="priceNotAccurate">Total cost you saved may not be accurate</string>
    <string name="agree">Agree</string>
    <string name="paymentError">Server error! Please contact out support team</string>
    <string name="serverChecking">We\'re checking server now!</string>
    <string name="tutorial_pubName">Tutorial pub</string>
    <string name="tutorial_pubCity">Shinchon</string>
    <string name="tutorial_pubAddress">Somewhere in Shinchon</string>
    <string name="tutorial_drinkName">Tutorink</string>
    <string name="tutorial_pubDescription">Have one free drink everyday!</string>
    <string name="tutorial_text1">Welcome to Drinkat!</string>
    <string name="tutorial_text2">Everyday, one glass, free</string>
    <string name="tutorial_text3">So, let\'s learn how to use Hanjan</string>
    <string name="tutorial_text4">First, click a pub you want to visit</string>
    <string name="tutorial_text5">Choose category you want to drink</string>
    <string name="tutorial_text6">Now, choose a drink you want to have!</string>
    <string name="tutorial_text7">Check if you chose right drink</string>
    <string name="tutorial_text8">Click yes to precede to the next step</string>
    <string name="tutorial_text9">Show this page to clerk,\nthen clerk will check your order.\n\nNow, click button below to start Drinkat!</string>
    <string name="tutorial_text10">Careful! This button must be clicked by clerk!</string>
    <string name="tutorial">Tutorial</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="withdrawalDialog">Are you sure you want to withdraw your account?\nAll of your remaining membership will be deleted!</string>
    <string name="showThisToClerk">Show this to clerk</string>
    <string name="nearbyPlacesLimits">Retrieving 30 nearby pubs from center of the map.\nIf you want to see more pubs, please zoom in</string>
    <string name="zoomToSeeMore">Zoom in to see pubs\' location</string>
    <string name="DrinkSelectorPopup_text2">clerk is right?\nPlease click confirm and provide product.</string>
    <string name="DrinkSelectorPopup_text3">Today\'s membership has been successfully used!</string>
    <string name="DrinkSelectorPopup_text4">You can use membership again after 6AM</string>
    <string name="DrinkSelectorPopup_text1">Show this to clerk.\nClerk will check order and click button.</string>
    <string name="startDrinkat">Click to start Drinkat</string>
    <string name="signupFreeCode">Welcome! We are offering you\nwelcome free coupon!</string>
    <string name="isFree">is free</string>
    <string name="preparingMenu">This store is preparing menu!</string>
    <string name="seeDetail">See detail</string>
    <string name="purchaseErrorMessage">An error occured! Please try again</string>
    <string name="drink">Drink</string>
    <string name="updateNeeded">Please update your app!</string>
    <string name="update">Update</string>
    <string name="purchaseWithBankTransfer">Purchase with bank transfer</string>
    <string name="bankTransferGuide1">Send membership fee to Kookmin bank 012501-04-277769 기정환,</string>
    <string name="bankTransferGuide2">Send transfer confirmation message to Kakao talk plus friend \'드링캣\',</string>
    <string name="bankTransferGuide3">Membership will be published right after we confirm</string>
    <string name="googlepurchase_id" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAp/edJXARjA0i2ux9iZvQSV7dqQZCqePBBmcB2c8mOJ05kEBtAbQtuNj+uig+4prqtdchPnsia4oCz1u9c/FThRzUJDb6F66wdT7zPTbV541x0+Kq/WGFw7PSh+kUvAr35/izX/raB2UHc8vgp7JBsuidnkQweEvzgP0iHZbc3hMpj3tlJjrerrRPTBwHJqMP44KgNDYgJFteiLSEov2DEnIoR52u/Jn3A6Cs5ctInudLo5CBUerwsaDphZvWe3GmlC40hl0U69vpBDOEzZmV9i/cxuh178oCFJkiHtozhIC7bPvTvuUwiWZsrP3fHZEtJR0Q+ioFfzT6MHMGZjawqwIDAQAB</string>
    <string name="purchasewithgoogle">Purchase with GooglePlay</string>
    <string name="drinkatUsePerStore">1 drinkat membership allowed per 2 people</string>
    <string name="filter">Filter</string>
    <string name="toTop">To top</string>
    <string name="doubleClickToSelect">Double click to select location</string>

</resources>
