<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundbox_white"

        android:layout_marginLeft="@dimen/leftRightMargin"
        android:layout_marginRight="@dimen/leftRightMargin"
        android:padding="@dimen/leftRightMargin"
        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            />


        <ImageView
            android:layout_width="@dimen/promotion_iconHeight"
            android:layout_height="@dimen/promotion_iconHeight"
            android:src="@drawable/promotion"
            android:layout_gravity="center_horizontal"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/promotion_editTextHeight"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/promotion_editText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/pleaseEnterPromotionCode"
                android:textColorHint="@color/darkGray"
                android:textColor="@color/black"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/promotion_delete"
                android:layout_width="@dimen/promotion_editTextHeight"
                android:layout_height="@dimen/promotion_editTextHeight"
                android:src="@drawable/xmark"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/promotion_buttonHeight"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/promotion_apply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/roundbox_maincolor"
                android:text="@string/apply"
                android:textSize="@dimen/promotion_mainFontSize"
                android:gravity="center"
                android:textColor="@color/white"
                />

            <View
                android:layout_width="@dimen/leftRightMargin"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/promotion_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/roundbox_gray"
                android:text="@string/cancel"
                android:textSize="@dimen/promotion_mainFontSize"
                android:gravity="center"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>